--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "scripts": {
     "prebuild": "rm -rf dist && mkdir dist",
-    "build": "babel src --out-dir dist",
+    "build": "babel src --out-dir dist --watch",
     "test": "mocha --compilers js:babel-core/register"
   },
+  "pre-commit":[
+    "test"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DragAndWatch/dragand-subtitle-plugin.git"
@@ -30,6 +33,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-core": "6.1.21",
-    "babel-preset-es2015": "6.1.18"
+    "babel-preset-es2015": "6.1.18",
+    "pre-commit": "1.1.2"
   }
 }
