--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "babel src --out-dir dist --watch",
     "test": "mocha --compilers js:babel-core/register"
   },
-  "pre-commit":[
+  "pre-commit": [
     "test"
   ],
   "repository": {
@@ -30,7 +30,9 @@
     "url": "https://github.com/DragAndWatch/dragand-subtitle-plugin/issues"
   },
   "homepage": "https://github.com/DragAndWatch/dragand-subtitle-plugin#readme",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "3.10.1"
+  },
   "devDependencies": {
     "babel-core": "6.1.21",
     "babel-preset-es2015": "6.1.18",
