--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "babel-core": "6.1.21",
     "babel-preset-es2015": "6.1.18",
+    "chai": "3.4.1",
     "pre-commit": "1.1.2"
   }
 }
