--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "lodash": "3.10.1",
     "moment": "^2.10.6",
     "natural": "^0.2.1",
+    "node-osdb-hash": "^1.0.1",
     "opensubtitles-api": "^2.1.0",
     "q": "^1.4.1",
-    "request": "^2.65.0"
+    "request": "^2.65.0",
+    "xml2json": "^0.9.0"
   },
   "devDependencies": {
     "babel-core": "6.1.21",
