--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragand-subtitle-plugin",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Open Source library to get subtitles from famous externals apis",
   "contributors": [
     {
@@ -32,7 +32,7 @@
     "open-subtitles",
     "addic7ed",
     "movies",
-    "series"
+    "series",
     "podnapisi",
     "yify"
   ],
