--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "homepage": "https://github.com/DragAndWatch/dragand-subtitle-plugin#readme",
   "dependencies": {
     "cheerio": "^0.19.0",
+    "download": "^4.4.3",
     "lodash": "3.10.1",
     "moment": "^2.10.6",
     "natural": "^0.2.1",
